# Little-Man-Computer

./: Cargo.toml  README  README.md  ascii.txt  code.txt  code2.txt  code3.txt
CLI/: Cargo.toml
CLI/src/: assembler.rs  error.rs  lexer.rs  main.rs
GUI/: Cargo.toml  build.rs
GUI/godot/: icon.svg.import  little_man_computer_gui.gdextension  main_window.gd  main_window.tscn  project.godot
GUI/resources/: resources.gresource.xml
GUI/rust/: Cargo.toml
GUI/rust/src/: file_tree.rs  lib.rs  watcher.rs
GUI/src/: main.rs
GUI/src/window/: imp.rs
cross_compile_test/: .rustc_info.json
cross_compile_test/x86_64-pc-windows-gnu/debug/: LittleManComputer.d
cross_compile_test/x86_64-pc-windows-gnu/debug/.fingerprint/LittleManComputer-77ef569e1d7aa5df/: bin-LittleManComputer  bin-LittleManComputer.json  dep-bin-LittleManComputer  output-bin-LittleManComputer
cross_compile_test/x86_64-pc-windows-gnu/debug/.fingerprint/bytemuck-3466bd330a847be6/: lib-bytemuck  lib-bytemuck.json
examples/: array.txt  ascii.txt  countdown.txt  led_countdown.txt  quine.txt  quine_led.txt
microbit/: Cargo.toml  Embed.toml
microbit-runtime/: Cargo.toml  build.rs  memory.x
microbit-runtime/src/: letter.rs  main.rs
microbit/src/: main.rs
shared/: Cargo.toml
shared/src/: assembler.rs  error.rs  lexer.rs  lib.rs  mailbox.rs  opcodes.rs  runtime.rs  stacked_std_runtime.rs  std_runtime.rs
src/: assembler.rs  error.rs  lexer.rs  main.rs  opcodes.rs  parser.rs  vm.rs
